--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -22,11 +22,11 @@
                 android:layout_height="wrap_content"
                 android:background="#009688"
                 android:textColor="@android:color/white"
-                android:paddingTop="35dp"
-                android:paddingBottom="35dp"
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp"
                 android:paddingLeft="30dp"
                 android:paddingRight="20dp"
-                android:textSize="46dp"
+                android:textSize="30dp"
                 android:text="Title"/>
 
             <LinearLayout
@@ -54,21 +54,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:paddingLeft="10dp">
+                    android:paddingLeft="5dp">
 
                     <TextView
                         android:id="@+id/text_view_release_date"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Release"
-                        android:textSize="24dp"
+                        android:text="Released-"
+                        android:textSize="15dp"
                         android:paddingBottom="10dp"/>
 
                     <TextView
                         android:id="@+id/text_view_user_rating"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="User Rating"
+                        android:text="User Rating: "
                         android:paddingBottom="10dp"/>
 
                 </LinearLayout>
