--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
     android:layout_width="match_parent" android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity" tools:ignore="MergeRootFrame">
 
     <android.support.v7.widget.Toolbar
@@ -11,7 +12,6 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_launcher"
             android:scaleType="center"/>
     </android.support.v7.widget.Toolbar>
 
@@ -24,4 +24,4 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:layout="@layout/fragment_main" />
-</FrameLayout>
+</LinearLayout>
