--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary"> #f44336</color>
-    <color name="colorPrimaryDark">#b71c1c</color>
+    <color name="colorPrimary"> #004d40</color>
+    <color name="colorPrimaryDark">#009688</color>
     <color name="colorAccent">#bbdefb</color>
 
     <!-- Added from Picasso Samples-->
