--- a/app/src/main/res/layout/review_list_layout.xml
+++ b/app/src/main/res/layout/review_list_layout.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/review_list">
+    android:layout_below="@+id/review_head">
 
-    <!--<ListView
-        android:id="@+id/review_list"
+    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/review_list_backup"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </ListView>-->
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
