--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary"> #004d40</color>
-    <color name="colorPrimaryDark">#009688</color>
-    <color name="colorAccent">#bbdefb</color>
+    <color name="colorPrimary"> #3f51b5</color>
+    <color name="colorPrimaryDark">#1a237e</color>
+    <color name="colorAccent">#ff4081</color>
+    <color name="colorFallbackAccentLight">#ff80ab</color>
+    <color name="colorFallbackAccentDark">#f50057</color>
 
     <!-- Added from Picasso Samples-->
     <color name="overlay_selector_pressed">#40000000</color>
@@ -11,4 +13,5 @@
 
     <color name="blue">#00abea</color>
     <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 </resources>
