--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,18 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="frag_top_margin">3dp</dimen>
+    <dimen name="frag_bottom_margin">3dp</dimen>
+    <dimen name="frag_left_margin">3dp</dimen>
+    <dimen name="frag_right_margin">3dp</dimen>
+    <dimen name="title_size">25sp</dimen>
+    <dimen name="info_textSize">25sp</dimen>
+    <dimen name="content_textSize">15sp</dimen>
+
+    <!-- margins -->
+    <dimen name="margin_fab">16dp</dimen>
+    <dimen name="margin_inline">4dp</dimen>
+    <dimen name="margin_default">8dp</dimen>
+    <dimen name="margin_large">16dp</dimen>
+    <dimen name="margin_for_fab">88dp</dimen>
 </resources>
