--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,8 @@
     <dimen name="frag_bottom_margin">3dp</dimen>
     <dimen name="frag_left_margin">3dp</dimen>
     <dimen name="frag_right_margin">3dp</dimen>
+
+    <!-- Textsize -->
     <dimen name="title_size">25sp</dimen>
     <dimen name="info_textSize">25sp</dimen>
     <dimen name="content_textSize">15sp</dimen>
@@ -17,4 +19,5 @@
     <dimen name="margin_default">8dp</dimen>
     <dimen name="margin_large">16dp</dimen>
     <dimen name="margin_for_fab">88dp</dimen>
+
 </resources>
