--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,5 +35,12 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
+    <!-- Define android:paddingEnd and Start in the layout, since it requires Min API level 17 -->
+    <style name="InLayoutPadding">
+        <item name="android:paddingTop">@dimen/margin_large</item>
+        <item name="android:paddingRight">@dimen/margin_large</item>
+        <item name="android:paddingLeft">@dimen/margin_large</item>
+        <item name="android:paddingBottom">@dimen/margin_large</item>
+    </style>
 
 </resources>
