--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:columnWidth="150dp"
-        android:numColumns="@integer/grid_columns"
+        android:numColumns="auto_fit"
         android:verticalSpacing="3dp"
         android:horizontalSpacing="3dp"
         android:stretchMode="columnWidth"
