--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -17,10 +17,19 @@
         android:layout_height="match_parent"
         android:columnWidth="150dp"
         android:numColumns="auto_fit"
-        android:verticalSpacing="3dp"
-        android:horizontalSpacing="3dp"
+        android:verticalSpacing="1dp"
+        android:horizontalSpacing="1dp"
         android:stretchMode="columnWidth"
         android:gravity="center"
         android:clickable="true" />
+
+    <TextView
+        android:id="@+id/emptyView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/empty"
+        android:layout_gravity="center"
+        android:fontFamily="sans-serif-condensed"
+        android:textAppearance="?android:textAppearanceLarge"/>
 
 </FrameLayout>
