--- a/app/src/main/res/layout/grid_item_layout.xml
+++ b/app/src/main/res/layout/grid_item_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,4 +12,17 @@
         android:adjustViewBounds="true"
         android:scaleType="fitXY"/>
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/grid_item_text"
+        style="@style/InLayoutPadding"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_gravity="bottom"
+        android:background="@color/black"
+        android:alpha="0.5"
+        android:textColor="@color/white"
+        android:visibility="gone"/>
+
+
+</FrameLayout>
