Two instances of toolbar in detailsfragment

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -15,11 +15,10 @@
         android:id="@+id/gridview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:columnWidth="150dp"
+        android:columnWidth="@dimen/grid_width"
         android:numColumns="auto_fit"
         android:verticalSpacing="1dp"
         android:horizontalSpacing="1dp"
-        android:stretchMode="columnWidth"
         android:gravity="center"
         android:clickable="true" />
 
