--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <dimen name="frag_bottom_margin">3dp</dimen>
     <dimen name="frag_left_margin">3dp</dimen>
     <dimen name="frag_right_margin">3dp</dimen>
+	<dimen name="grid_width">150dp</dimen>
 
     <!-- Textsize -->
     <dimen name="title_size">25sp</dimen>
