--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -13,7 +13,8 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:scaleType="center"/>
+            android:src="@drawable/font_img_white"
+            android:scaleType="fitStart"/>
     </android.support.v7.widget.Toolbar>
 
     <LinearLayout
