--- a/app/src/main/res/layout-sw600dp/fragment_detail_contents.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_detail_contents.xml
@@ -17,8 +17,6 @@
         style="@style/InLayoutPadding"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:divider="@drawable/view_separator"
-        android:showDividers="end"
         android:orientation="vertical">
 
         <LinearLayout
@@ -31,18 +29,20 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:paddingEnd="@dimen/margin_default"
+                android:paddingRight="@dimen/margin_default"
                 android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/image_view_poster"
-                    android:layout_width="@dimen/grid_width"
-                    android:layout_height="200dp"
+                    android:layout_width="185dp"
+                    android:layout_height="277dp"
                     android:scaleType="fitCenter" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="vertical">
@@ -147,6 +147,7 @@
                 android:foregroundGravity="top"
                 android:minHeight="0dp"
                 android:minWidth="0dp"
+                android:visibility="gone"
                 style="?android:attr/borderlessButtonStyle"/>
 
         </RelativeLayout>
@@ -162,7 +163,7 @@
             android:paddingBottom="0dp"
             android:paddingEnd="@dimen/margin_large"
             android:paddingStart="@dimen/margin_large"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
 
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
