--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,9 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:scaleType="center"/>
+            android:layout_height="wrap_content"
+            android:src="@drawable/font_img_white"
+            android:scaleType="fitStart"/>
     </android.support.v7.widget.Toolbar>
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
