--- a/app/src/main/res/layout/fragment_detail_layout.xml
+++ b/app/src/main/res/layout/fragment_detail_layout.xml
@@ -35,6 +35,7 @@
                 android:id="@+id/detailstoolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                android:visibility="gone"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
@@ -49,7 +50,7 @@
         android:layout_width="wrap_content"
         android:id="@+id/fab"
         android:src="@drawable/ic_favorite_border_white_24dp"
-        app:layout_anchor="@id/appbar"
+        app:layout_anchor="@id/content_container"
         app:layout_anchorGravity="bottom|right|end"
         android:layout_margin="@dimen/fab_margin"
         android:clickable="true" />
