--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary"> #3f51b5</color>
-    <color name="colorPrimaryDark">#1a237e</color>
+    <color name="colorPrimary">#3f51b5</color>   <!--#3f51b5</color>-->
+    <color name="colorPrimaryDark">#1A237E</color>   <!--#1a237e</color>-->
     <color name="colorAccent">#ff4081</color>
     <color name="colorFallbackAccentLight">#ff80ab</color>
     <color name="colorFallbackAccentDark">#f50057</color>
