--- a/app/src/main/res/layout/fragment_detail_contents.xml
+++ b/app/src/main/res/layout/fragment_detail_contents.xml
@@ -16,20 +16,22 @@
 
     <LinearLayout
         style="@style/InLayoutPadding"
+        android:id="@+id/details_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#E8EAF6"
         android:divider="@drawable/view_separator"
-        android:orientation="vertical"
-        android:background="#E8EAF6">
+        android:orientation="vertical">
 
         <android.support.v7.widget.CardView
+            android:id="@+id/detailsCardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="5dp"
-            card_view:contentPadding="6dp"
-            card_view:cardUseCompatPadding="true"
+            card_view:cardBackgroundColor="#F5F5F5"
             card_view:cardElevation="4dp"
-            card_view:cardBackgroundColor="#F5F5F5">
+            card_view:cardUseCompatPadding="true"
+            card_view:contentPadding="6dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -68,19 +70,19 @@
                             style="@style/TitleAppearance"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textColor="@color/black"
                             android:paddingBottom="@dimen/margin_default"
                             android:paddingEnd="@dimen/margin_default"
                             android:paddingRight="@dimen/margin_default"
-                            android:paddingTop="@dimen/margin_default" />
+                            android:paddingTop="@dimen/margin_default"
+                            android:textColor="@color/black" />
 
                         <TextView
                             android:id="@+id/text_view_user_rating"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:paddingBottom="@dimen/margin_inline"
-                            android:textSize="@dimen/info_textSize"
-                            android:textColor="@color/black"/>
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/info_textSize" />
 
                         <TextView
                             android:id="@+id/text_view_release_date"
@@ -94,32 +96,32 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:paddingBottom="10dp"
-                            android:textSize="@dimen/content_textSize"/>
+                            android:textSize="@dimen/content_textSize" />
 
                     </LinearLayout>
 
                 </LinearLayout>
 
                 <TextView
-                    style="@style/InLayoutPadding"
                     android:id="@+id/text_view_synopsis"
+                    style="@style/InLayoutPadding"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black" />
 
                 <Button
                     android:id="@+id/credits_button"
+                    style="?android:attr/borderlessButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/margin_default"
+                    android:layout_marginStart="@dimen/margin_default"
                     android:elevation="4dp"
                     android:padding="@dimen/margin_inline"
                     android:text="@string/movie_credits"
-                    android:textSize="16sp"
                     android:textColor="@color/colorPrimaryDark"
-                    android:textStyle="normal"
-                    android:layout_marginStart="@dimen/margin_default"
-                    android:layout_marginLeft="@dimen/margin_default"
-                    style="?android:attr/borderlessButtonStyle"/>
+                    android:textSize="16sp"
+                    android:textStyle="normal" />
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
@@ -134,45 +136,91 @@
             android:scaleType="fitCenter" />
 
         <TextView
-            style="@style/InLayoutPadding"
             android:id="@+id/trailer_head"
+            style="@style/InLayoutPadding"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-medium"
-            android:textStyle="bold"
-            android:textSize="@dimen/info_textSize"
+            android:gravity="bottom"
             android:textColor="@color/colorPrimaryDark"
-            android:gravity="bottom"/>
+            android:textSize="@dimen/info_textSize"
+            android:textStyle="bold" />
 
-        <LinearLayout
-            style="@style/InLayoutPadding"
+        <!--<LinearLayout
             android:id="@+id/trailer_list"
+            style="@style/InLayoutPadding"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="0dp"
-            android:visibility="visible"/>
+            android:visibility="visible"/>-->
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/trailer_recycler"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/empty_card_trailers"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            card_view:contentPadding="6dp"
+            card_view:cardUseCompatPadding="true"
+            card_view:cardElevation="4dp"
+            card_view:cardBackgroundColor="#F5F5F5">
 
             <TextView
-                style="@style/InLayoutPadding"
-                android:id="@+id/review_head"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-medium"
-                android:textStyle="bold"
-                android:textSize="@dimen/info_textSize"
-                android:textColor="@color/colorPrimaryDark"
-                android:gravity="bottom"/>
+                android:text="@string/no_trailers"
+                android:textSize="16sp"/>
+
+        </android.support.v7.widget.CardView>
+
+        <TextView
+            android:id="@+id/review_head"
+            style="@style/InLayoutPadding"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="bottom"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="@dimen/info_textSize"
+            android:textStyle="bold" />
 
         <!--<include layout="@layout/review_list_layout" />-->
         <LinearLayout
-            style="@style/InLayoutPadding"
             android:id="@+id/review_list"
+            style="@style/InLayoutPadding"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="0dp"
-            android:visibility="visible"/>
+            android:visibility="visible" />
+
+        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/empty_card_reviews"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            card_view:contentPadding="6dp"
+            card_view:cardUseCompatPadding="true"
+            card_view:cardElevation="4dp"
+            card_view:cardBackgroundColor="#F5F5F5">
+
+            <TextView
+                android:id="@+id/empty_card_Text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/no_reviews"
+                android:textSize="16sp"/>
+
+        </android.support.v7.widget.CardView>
 
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
