--- a/app/src/main/res/layout/list_item_review.xml
+++ b/app/src/main/res/layout/list_item_review.xml
@@ -8,14 +8,16 @@
 
 <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_gravity="center"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    card_view:contentPadding="6dp"
+    app:cardCornerRadius="4dp"
+    card_view:cardBackgroundColor="#F5F5F5"
+    card_view:cardElevation="2dp"
     card_view:cardUseCompatPadding="true"
-    card_view:cardElevation="4dp"
-    card_view:cardBackgroundColor="#F5F5F5">
+    card_view:contentPadding="6dp">
 
     <LinearLayout
         android:layout_width="match_parent"
