--- a/app/src/main/res/layout/list_item_trailer.xml
+++ b/app/src/main/res/layout/list_item_trailer.xml
@@ -1,45 +1,31 @@
-<?xml version="1.0" encoding="utf-8"?><!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="150dp"
-    android:paddingTop="@dimen/margin_default"
-    android:paddingBottom="@dimen/margin_default"
-    android:weightSum="1">-->
-
+<?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/tools"
     android:id="@+id/card_view"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
+    app:cardCornerRadius="4dp"
     card_view:cardBackgroundColor="#F5F5F5"
-    card_view:cardElevation="4dp"
+    card_view:cardElevation="2dp"
     card_view:cardUseCompatPadding="true"
     card_view:contentPadding="6dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/trailerImg"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:contentDescription="@string/imageDescription" />
 
-        <TextView
-            android:id="@+id/trailerName"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="end|center"
-            android:layout_weight="1"
-            android:fontFamily="sans-serif"
-            android:textStyle="normal"
-            android:textColor="@color/black"
-            android:paddingLeft="@dimen/margin_inline"
-            android:paddingStart="@dimen/margin_inline"
-            android:textSize="16sp"
-            android:textAllCaps="true" />
-    </LinearLayout>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_play_circle_outline_white_48dp"/>
+
+    </FrameLayout>
 </android.support.v7.widget.CardView>
