--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF9800</color>   <!--#3f51b5</color>-->
-    <color name="colorPrimaryDark">#F57C00</color>   <!--#1a237e</color>-->
+    <color name="colorPrimary">#C2185B</color>   <!--#3f51b5</color>-->
+    <color name="colorPrimaryDark">#880E4F</color>   <!--#1a237e</color>-->
     <color name="colorAccent">#EF5350</color>
     <color name="colorFallbackAccentLight">#C2185B</color>
     <color name="colorFallbackAccentDark">#880E4F</color>
-    <color name="tabColor">#FFB74D</color>
+    <color name="tabColor">#F3FFF9</color>
     <color name="menuFab">#FFA000</color>
 
     <color name="colorAccentMain">#F06292</color>
@@ -22,7 +22,11 @@
     <color name="indicator">#FFF59D</color>
 
     <!-- Color Swatch -->
+    <color name="green200">#C5E1A5</color>
+    <color name="green300">#AED581</color>
     <color name="green500">#8BC34A</color>
+    <color name="green700">#689F38</color>
+    <color name="green900">#33691E</color>
     <color name="purple300">#9575CD</color>
     <color name="pink300">#F06292</color>
     <color name="pink500">#E91E63</color>
@@ -37,5 +41,28 @@
     <color name="grey400">#BDBDBD</color>
     <color name="grey500">#9E9E9E</color>
     <color name="grey700">#616161</color>
+    <color name="teal200">#80CBC4</color>
+    <color name="teal300">#4DB6AC</color>
+    <color name="teal500">#009688</color>
+    <color name="teal700">#00796B</color>
+    <color name="teal900">#004D40</color>
+    <color name="cyan300">#4DD0E1</color>
+    <color name="cyan500">#00BCD4</color>
+    <color name="deepPurple300">#9575CD</color>
+    <color name="deepPurple500">#673AB7</color>
+    <color name="deepPurple700">#512DA8</color>
+    <color name="deepPurple900">#311B92</color>
+
+    <!-- color.adobe.com swatch -->
+    <color name="green_1">#59CC95</color>
+    <color name="green_2">#009C52</color>
+    <color name="green_3">#007D42</color>
+    <color name="green_4">#004F29</color>
+
+    <color name="grey_1">#F3FFF9</color>
+    <color name="grey_3">#9DB2A8</color>
+
+    <color name="red_2">#FF3115</color>
+    <color name="red_3">#B21600</color>
     
 </resources>
