--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="toolbarStyle">@style/Toolbar</item>
+        <item name="android:windowExitTransition">@transition/grid_exit</item>
+        <item name="android:windowContentTransitions">true</item>
     </style>
 
     <!-- Main Activity Toolbar style -->
