--- a/app/src/main/res/layout/fragment_detail_layout.xml
+++ b/app/src/main/res/layout/fragment_detail_layout.xml
@@ -57,10 +57,10 @@
         android:paddingRight="10dp"
         android:paddingBottom="10dp"
         android:paddingLeft="10dp"
-        app:menu_colorNormal="@color/green_1"
+        app:menu_colorNormal="@color/lightgreen300"
         fab:menu_labels_ellipsize="end"
         fab:menu_labels_singleLine="true"
-        fab:menu_colorNormal="@color/green_1"
+        fab:menu_colorNormal="@color/lightgreen300"
         fab:menu_colorPressed="#FCE4EC"
         fab:menu_colorRipple="#99FFFFFF"
         fab:menu_fab_label="Menu label">
@@ -72,7 +72,7 @@
             android:src="@drawable/ic_favorite_border_white_24dp"
             fab:fab_size="mini"
             fab:fab_label="Favorite"
-            app:fab_colorNormal="@color/green_4"/>
+            app:fab_colorNormal="@color/lightgreen600"/>
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/fab2"
@@ -81,7 +81,7 @@
             android:src="@drawable/ic_add_to_queue_white_24dp"
             fab:fab_size="mini"
             fab:fab_label="Watched"
-            app:fab_colorNormal="@color/green_3"/>
+            app:fab_colorNormal="@color/lightgreen500"/>
 
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/fab3"
@@ -90,7 +90,7 @@
             android:src="@drawable/ic_share_white_24dp"
             fab:fab_size="mini"
             fab:fab_label="Share"
-            app:fab_colorNormal="@color/green_2"/>
+            app:fab_colorNormal="@color/lightgreen300"/>
 
     </com.github.clans.fab.FloatingActionMenu>
 
