--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#C2185B</color>   <!--#3f51b5</color>-->
-    <color name="colorPrimaryDark">#880E4F</color>   <!--#1a237e</color>-->
-    <color name="colorAccent">#EF5350</color>
-    <color name="colorFallbackAccentLight">#C2185B</color>
-    <color name="colorFallbackAccentDark">#880E4F</color>
-    <color name="tabColor">#F3FFF9</color>
+    <color name="colorPrimary">#FF7C1E</color>   <!--#3f51b5</color>-->
+    <color name="colorPrimaryDark">#B24A00</color>   <!--#1a237e</color>-->
+    <color name="colorAccent">#7FE895</color>
+    <color name="colorFallbackAccentLight">#8CFFA4</color>
+    <color name="colorFallbackAccentDark">#73D186</color>
+    <color name="tabColor">#ffffff</color>
     <color name="menuFab">#FFA000</color>
 
     <color name="colorAccentMain">#F06292</color>
@@ -22,20 +22,44 @@
     <color name="indicator">#FFF59D</color>
 
     <!-- Color Swatch -->
-    <color name="green200">#C5E1A5</color>
-    <color name="green300">#AED581</color>
-    <color name="green500">#8BC34A</color>
-    <color name="green700">#689F38</color>
-    <color name="green900">#33691E</color>
+    <color name="lightgreen200">#C5E1A5</color>
+    <color name="lightgreen300">#AED581</color>
+    <color name="lightgreen400">#9CCC65</color>
+    <color name="lightgreen500">#8BC34A</color>
+    <color name="lightgreen600">#7CB342</color>
+    <color name="lightgreen700">#689F38</color>
+    <color name="lightgreen800">#558B2F</color>
+    <color name="lightgreen900">#33691E</color>
+    <color name="green200">#A5D6A7</color>
+    <color name="green300">#81C784</color>
+    <color name="green400">#66BB6A</color>
+    <color name="green500">#4CAF50</color>
+    <color name="green600">#43A047</color>
+    <color name="green700">#388E3C</color>
+    <color name="green800">#2E7D32</color>
+    <color name="green900">#1B5E20</color>
     <color name="purple300">#9575CD</color>
+    <color name="pink200">#F48FB1</color>
     <color name="pink300">#F06292</color>
+    <color name="pink400">#EC407A</color>
     <color name="pink500">#E91E63</color>
+    <color name="pink600">#D81B60</color>
+    <color name="pink700">#C2185B</color>
+    <color name="pink800">#AD1457</color>
+    <color name="pink900">#880E4F</color>
+    <color name="amber200">#FFE082</color>
+    <color name="amber300">#FFD54F</color>
+    <color name="amber400">#FFCA28</color>
     <color name="amber500">#FFC107</color>
+    <color name="amber600">#FFB300</color>
+    <color name="amber700">#FFA000</color>
     <color name="red900">#B71C1C</color>
+    <color name="red800">#C62828</color>
     <color name="red700">#D32F2F</color>
     <color name="red600">#E53935</color>
     <color name="red500">#F44336</color>
     <color name="red400">#EF5350</color>
+    <color name="red50">#FFEBEE</color>
     <color name="grey100">#F5F5F5</color>
     <color name="grey300">#E0E0E0</color>
     <color name="grey400">#BDBDBD</color>
@@ -43,7 +67,9 @@
     <color name="grey700">#616161</color>
     <color name="teal200">#80CBC4</color>
     <color name="teal300">#4DB6AC</color>
+    <color name="teal400">#26A69A</color>
     <color name="teal500">#009688</color>
+    <color name="teal600">#00897B</color>
     <color name="teal700">#00796B</color>
     <color name="teal900">#004D40</color>
     <color name="cyan300">#4DD0E1</color>
@@ -52,6 +78,23 @@
     <color name="deepPurple500">#673AB7</color>
     <color name="deepPurple700">#512DA8</color>
     <color name="deepPurple900">#311B92</color>
+    <color name="blue100">#BBDEFB</color>
+    <color name="blue200">#90CAF9</color>
+    <color name="blue300">#64B5F6</color>
+    <color name="blue400">#42A5F5</color>
+    <color name="blue500">#2196F3</color>
+    <color name="blue600">#1E88E5</color>
+    <color name="blue700">#1976D2</color>
+    <color name="blue800">#1565C0</color>
+    <color name="blue900">#0D47A1</color>
+    <color name="yellow200">#FFF59D</color>
+    <color name="yellow300">#FFF176</color>
+    <color name="yellow400">#FFEE58</color>
+    <color name="yellow500">#FFEB3B</color>
+    <color name="yellow600">#FDD835</color>
+    <color name="yellow700">#FBC02D</color>
+    <color name="yellow800">#F9A825</color>
+    <color name="yellow900">#F57F17</color>
 
     <!-- color.adobe.com swatch -->
     <color name="green_1">#59CC95</color>
