--- a/app/src/main/res/layout/fragment_detail_contents.xml
+++ b/app/src/main/res/layout/fragment_detail_contents.xml
@@ -65,16 +65,34 @@
                         android:layout_weight="1"
                         android:orientation="vertical">
 
-                        <TextView
-                            android:id="@+id/text_view_title"
-                            style="@style/TitleAppearance"
-                            android:layout_width="match_parent"
+                        <LinearLayout
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:paddingBottom="@dimen/margin_default"
-                            android:paddingEnd="@dimen/margin_default"
-                            android:paddingRight="@dimen/margin_default"
-                            android:paddingTop="@dimen/margin_default"
-                            android:textColor="@color/black" />
+                            android:orientation="horizontal"
+                            android:paddingTop="@dimen/margin_inline"
+                            android:paddingBottom="@dimen/margin_inline">
+
+                            <TextView
+                                android:id="@+id/text_view_title"
+                                style="@style/TitleAppearance"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:paddingEnd="@dimen/margin_default"
+                                android:paddingRight="@dimen/margin_default"
+                                android:textColor="@color/black" />
+
+                            <TextView
+                                android:id="@+id/text_view_release_date"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:textSize="@dimen/content_textSize" />
+
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"></LinearLayout>
 
                         <TextView
                             android:id="@+id/text_view_user_rating"
@@ -82,15 +100,8 @@
                             android:layout_height="wrap_content"
                             android:padding="@dimen/margin_inline"
                             android:textColor="@color/black"
-                            android:textSize="@dimen/content_textSize"
+                            android:textSize="18sp"
                             android:background="@drawable/rating_background"/>
-
-                        <TextView
-                            android:id="@+id/text_view_release_date"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:paddingBottom="@dimen/margin_inline"
-                            android:textSize="@dimen/content_textSize" />
 
                         <TextView
                             android:id="@+id/text_view_vote_count"
@@ -225,4 +236,3 @@
 
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
-
