--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,28 +5,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GridViewFragment">
+    tools:context=".GridViewFragment"
+    android:background="@color/grey300">
 
-    <GridView
-        android:id="@+id/gridview"
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swiperefresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clickable="true"
-        android:gravity="center"
-        android:horizontalSpacing="4dp"
-        android:verticalSpacing="4dp" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/emptyView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:fontFamily="sans-serif"
-        android:text="@string/empty"
-        android:textAppearance="?android:textAppearanceLarge"
-        android:textColor="@color/overlay_selector_pressed"
-        android:textStyle="normal"
-        android:visibility="gone" />
+        <GridView
+            android:id="@+id/gridview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:gravity="center"
+            android:horizontalSpacing="4dp"
+            android:verticalSpacing="4dp" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <com.wang.avi.AVLoadingIndicatorView
         android:id="@+id/avloadingIndicatorView"
@@ -36,5 +33,27 @@
         android:visibility="gone"
         app:indicator="TriangleSkewSpin"
         app:indicator_color="@color/indicator" />
+
+    <RelativeLayout
+        android:id="@+id/networkLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+
+        <ImageView
+            android:id="@+id/signalConnectivity"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_signal_wifi_off_grey_36px"/>
+
+        <Button
+            android:id="@+id/networkButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/signalConnectivity"
+            android:layout_centerHorizontal="true"
+            android:text="CHECK SETTINGS"/>
+    </RelativeLayout>
 
 </FrameLayout>
