--- a/app/src/main/res/layout/grid_item_layout.xml
+++ b/app/src/main/res/layout/grid_item_layout.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    card_view:cardCornerRadius="8dp"
+    card_view:cardCornerRadius="0dp"
     card_view:cardElevation="6dp"
     android:padding="@dimen/margin_default"
     card_view:cardBackgroundColor="@color/grey100">
@@ -22,18 +22,37 @@
             android:paddingTop="@dimen/margin_default"
             android:paddingBottom="@dimen/margin_inline"/>
 
-        <TextView
-            android:id="@+id/grid_item_text"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:textColor="@color/black"
-            android:lines="2"
-            android:gravity="center"
-            android:textAllCaps="true"
-            android:fontFamily="sans-serif-condensed"
-            android:visibility="visible"
-            android:padding="0dp"/>
+            android:padding="@dimen/margin_inline">
+
+            <ImageView
+                android:id="@+id/star_Img"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:src="@drawable/ic_star_rate_yellow_18px"/>
+
+            <TextView
+                android:id="@+id/grid_item_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/star_Img"
+                android:textSize="18sp"
+                android:textColor="@color/black"
+                android:textAllCaps="true"
+                android:fontFamily="sans-serif-condensed"/>
+
+            <TextView
+                android:id="@+id/release_date_grid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:textSize="18sp"
+                android:fontFamily="sans-serif-condensed"/>
+
+        </RelativeLayout>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
