--- a/app/src/main/res/layout/list_item_credits.xml
+++ b/app/src/main/res/layout/list_item_credits.xml
@@ -3,10 +3,12 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <ImageView
         android:id="@+id/profile_picture"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:visibility="visible"/>
 
     <LinearLayout
         android:layout_width="0dp"
