--- a/app/src/main/res/menu/menu_details.xml
+++ b/app/src/main/res/menu/menu_details.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MovieSearchActivity">
     <item
-        android:id="@+id/menu_item_share"
+        android:id="@+id/action_search_activity"
+        android:title="Search"
         app:showAsAction="always"
-        android:title="Share"
-        app:actionProviderClass=
-            "android.support.v7.widget.ShareActionProvider" />
-
+        app:actionViewClass="android.support.v7.widget.SearchView"/>
 </menu>
